--- a/html/index.html
+++ b/html/index.html
@@ -12,10 +12,10 @@
                 <a href="index.html"></a>
                 <div class="nav-links">
                     <ul>
-                        <li><a href="about.html">HOME</a></li>
-                        <li><a href="">ABOUT</a></li>
-                        <li><a href="">MY LIBRARY</a></li>
-                        <li><a href="">NEWSLETTER</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
+                        <li><a href="library.html">MY LIBRARY</a></li>
+                        <li><a href="newsletter.html">NEWSLETTER</a></li>
                     </ul>
                 </div>
             </nav>
